# CuriGPT-ros

./: .gitignore   CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: config.json
docs/: Installation.md
prompt/: mllm_prompt_Chinese.txt  mllm_prompt_English.txt
scripts/: audio_assistant.py  curigpt.py  curigpt_chinese.py  curigpt_ending.py  curigpt_welcome.py  mllm_reasoning.py
src/curigpt_ros/actions/: single_hand_grasp.py
src/curigpt_ros/models/: audio_assistant.py  mllm_reasoning.py
src/curigpt_ros/utils/: action_utils.py  img_saver.py  ros_utils.py  vis_utils.py
