<?xml version="1.0"?>
<package format="2">
  <name>curigpt_ros</name>
    <version>0.1.0</version>
    <description>The CuriGPT-ros package</description>

    <maintainer email="zli@mae.link.cuhk.edu.hk">zhuoli</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>rospy</depend>

</package>
